--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -736,6 +736,11 @@ section.lazy-placeholder:after {
 .cid-sdxk7cfJTt .card {
   padding-bottom: 1.5rem;
 }
+.cid-sg3hzpPwEN {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
 .cid-rZWNJFg13W {
   padding-top: 105px;
   padding-bottom: 0px;
@@ -841,6 +846,11 @@ section.lazy-placeholder:after {
 .cid-rZWPD0fEgY .card-box .mbr-section-btn a {
   margin-top: 1rem;
   margin-bottom: 0;
+}
+.cid-sg3hzpPwEN {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
 }
 .cid-sdE6Py6suw {
   padding-top: 90px;
@@ -965,6 +975,16 @@ section.lazy-placeholder:after {
     margin: 1rem 0 0 0;
   }
 }
+.cid-sg3hzpPwEN {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-sg3hzpPwEN {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
 .cid-sf9Ep2tDoX {
   background: #149dcc;
   padding-top: 60px;
@@ -978,6 +998,11 @@ section.lazy-placeholder:after {
   .cid-sf9Ep2tDoX .video-block {
     width: 100% !important;
   }
+}
+.cid-sg3hzpPwEN {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
 }
 .cid-sg3e3etFkI {
   padding-top: 120px;
@@ -1002,4 +1027,9 @@ section.lazy-placeholder:after {
 }
 .cid-sg3e3etFkI H2 {
   color: #0f7699;
+}
+.cid-sg3hzpPwEN {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
 }
